[gd_scene load_steps=2 format=3 uid="uid://tda235hj1bhk"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_iswow"]

[node name="Control" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iswow")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.6)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 838.0
offset_top = 225.0
offset_right = 1073.0
offset_bottom = 309.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 61
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 738.0
offset_top = 404.0
offset_right = -735.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "RESUME"

[node name="Quit to Title" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "QUIT TO TITLE"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit to Title" to="." method="_on_quit_to_title_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
